Fix Dialog CSS overflow auto to aui-wdiget-bd
git-svn-id: svn://svn.liferay.com/repos/public/alloy/trunk@36446 05bdf26c-840f-0410-9ced-eb539d925f36

--- a/themes/base/css/dialog.css
+++ b/themes/base/css/dialog.css
@@ -19,6 +19,7 @@
 	border-color: transparent #999 #999 #bbb;
 	padding: 10px;
 	background: #fff;
+	overflow: auto;
 }
 .aui-dialog .aui-widget-ft {
 	border: 1px solid #ccc;
